fix: input-body btn z-index 1

--- a/packages/components/input-group/input.scss
+++ b/packages/components/input-group/input.scss
@@ -104,6 +104,7 @@
         top: 50%;
         right: 1.5rem;
         transform: translateY(-50%);
+        z-index: 1;
       }
       .c-btn + input,
       .c-btn__o + input {
